--- a/src/styles.css
+++ b/src/styles.css
@@ -121,10 +121,11 @@ form > div button {
   cursor: pointer;
 }
 
-.container div:first-of-type {
+.container > div:first-of-type {
   height: 70px;
-  background-color: #ddd;
-  box-shadow: 0px 0px 10px 3px rgba(177, 193, 204, 0.2);
+  background-color: #9C34C2;
+  border-bottom: 2px solid #000;
+  margin-bottom: 50px;
 }
 
 .container div > h1 {
@@ -132,9 +133,32 @@ form > div button {
   font-size: 3rem;
   letter-spacing: 3px;
   text-align: center;
+  color: #fff;
   padding: 10px;
 }
 
-.container div:last-of-type {
+.container > div:last-of-type {
   min-height: 100vh;
+}
+
+.project-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px solid #000;
+  border-radius: 40px;
+  padding: 10px 20px;
+  margin: 25px;
+}
+
+.project-card > h2 {
+  font-size: 1.5rem;
+  color: #9C34C2;
+  cursor: pointer;
+}
+
+.project-card > p {
+  font: 1rem;
+  font-style: italic;
+  font-weight: 300;
 }
