--- a/src/pages/taskCards.css
+++ b/src/pages/taskCards.css
@@ -9,7 +9,6 @@
   height: 300px;
   display: inline-block;
   font-size: 1.25rem;
-  text-align: center;
   line-height: 2;
   padding: 20px;
   margin: 20px 40px;
@@ -17,4 +16,8 @@
   border-radius: 8px;
   box-shadow: 2px 12px 12px -6px rgba(0, 0, 0, 0.5);
   overflow-y: scroll;
+}
+
+.task-card h3 {
+  text-align: center;
 }
