--- a/src/styles.css
+++ b/src/styles.css
@@ -193,3 +193,12 @@ dialog::backdrop {
 .display-container > div:last-of-type {
   min-height: 100vh;
 }
+
+#select-project {
+  width: 150px;
+  font-size: 1rem;
+  text-align: center;
+  padding: 5px 10px;
+  border: 1px solid #9c34c2;
+  border-radius: 5px;
+}
