--- a/src/pages/taskCards.css
+++ b/src/pages/taskCards.css
@@ -19,6 +19,7 @@
 }
 
 .task-card h3 {
+  font-size: 1.5rem;
   text-align: center;
 }
 
@@ -28,5 +29,6 @@
 }
 
 .task-card span {
-  font-weight: 800;
+  font-size: 1rem;
+  font-weight: 600;
 }
