--- a/src/pages/taskCards.css
+++ b/src/pages/taskCards.css
@@ -36,3 +36,16 @@
   font-size: 1rem;
   font-weight: 600;
 }
+
+.delete-button,
+.complete-button {
+  font-size: 0.85rem;
+  font-weight: 600;
+  display: block;
+  color: #9c34c2;
+  background-color: #fff;
+  padding: 6px 8px;
+  margin: 10px auto;
+  border-radius: 5px;
+  cursor: pointer;
+}
