--- a/src/pages/taskCards.css
+++ b/src/pages/taskCards.css
@@ -49,3 +49,12 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+.message { 
+  font-family: sans-serif;
+  font-size: 2.25rem;
+  font-weight: 600;
+  color: #302d2d;
+  padding-left: 2rem;
+  opacity: 0.8;
+}
